# spark_anomaly_detection

./: .gitignore  README.md  main.py  pyproject.toml
backend/: load_data.ipynb  transform_pollution_data.ipynb  transform_traffic_data.ipynb
backend/database/: pollution_magnitudes.csv  pollution_stations.csv  traffic_street_coordinates.geojson
backend/extract_service/: app.py  utils.py
backend/load_transform_service/: load_data.py  transform_utils.py
backend/spark-service/: app.py  utils.py
backend/spark-service/traffic_data/: 1746987591609907.xml  17469876025540326.xml
