[project]
name = "spark-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.23",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "minio>=7.2.15",
    "pandas>=2.2.3",
    "pyproj>=3.7.1",
    "pyspark>=3.5.5",
    "ruff>=0.11.8",
]
